--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
         "slim/slim": "2.*",
         "entomb/slim-json-api": "*",
         "michelf/php-markdown": "*",
-        "slim/extras": "*",
-	"predis/predis": "*"
+        "slim/extras": "*"
     }
 }
